hphp/test/slow/rx/multiple_reactivity4.php.expectf
Fatal error: Only one of following annotations is allowed: __Pure, __Rx, __RxShallow, __RxLocal, __NonRx. in %s/test/slow/rx/multiple_reactivity4.php on line 4
